# screen-reminder

./: .env.example  .gitignore  BUILD.md  README.md  SETUP.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  contrast.rs  dedupe.rs  lib.rs  main.rs  models.rs  oauth_util.rs  overlay_window.rs  push_sync.rs  quiet_hours.rs  scheduler.rs  secrets.rs  settings_merge.rs  storage.rs  sync_engine.rs  tray.rs
src-tauri/src/calendar/: apple.rs  caldav.rs  google.rs  google_tasks.rs  microsoft_todo.rs  mod.rs  outlook.rs
src/components/: AccountStylePanel.tsx  AccountsPanel.tsx  AdvancedOptionsPanel.tsx  AnimationPreview.tsx  AppearancePanel.tsx  FontPicker.tsx  GeneralSettingsPanel.tsx  IconPicker.tsx  ReminderBubble.tsx  StatusBar.tsx  UpcomingPanel.tsx
src/lib/: api.ts  chime.ts  composition.ts  formatEventTime.ts  formatRelativeTime.ts  timeUntil.ts  types.ts
src/overlay/: OverlayApp.tsx  main.tsx  overlay.css
