[package]
name = "screen-reminder"
version = "0.1.0"
description = "Animated calendar reminder overlays"
authors = ["Screen Reminder"]
edition = "2021"

[lib]
name = "screen_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
oauth2 = { version = "5", features = ["reqwest"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
url = "2"
urlencoding = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tiny_http = "0.12"
xcap = "0.0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
